# AutorizadaCell

./: .gitignore  Procfile  manage.py  pyproject.toml  requirements.txt
catalog/: admin.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
catalog/management/commands/: seed_catalog.py
catalog/migrations/: 0001_initial.py  0002_product_price_optional.py
catalog/templates/catalog/: base.html  contato.html  home.html  product_detail.html  product_list.html  sobre.html
loja_celulares/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: style.css
