[project]
name = "loja_celulares"
version = "0.1.0"
description = "Site catálogo Autorizada Cell"
requires-python = ">=3.12"
dependencies = [
    "Django>=6.0,<7",
    "Pillow>=12.0",
    "dj-database-url>=2.0,<3",
    "gunicorn>=22.0",
    "psycopg[binary]>=3.0",
    "python-dotenv>=1.0",
    "whitenoise>=6.0",
]

[tool.vercel.scripts]
build = "python manage.py migrate --noinput"
